@@ -18,6 +18,7 @@ Change log next version
 * Replace deprecated HttpEntity.consume with EntityUtils.consume to fix problems with connections not closing properly (issue 633) (thanks to Marin Dzhigarov and Julian Engelhardt for help and PR)
 * Fixing NullPointerException for GET requests with an empty body (issue 642)
 * Form authentication for fully-qualified URIs now uses the URI specified in the request instead of just localhost (issue 641)
+* Improve escaping for XmlPath's containing colon. For example you can now do like this without manually having to escape anything in the path: "x:something.x:y[0]" (issue 647)
 
 Change log 2.8.0 (2015-12-18)
 -----------------------------
